--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <link rel="shortcut icon" type="image/png" href="https://pillowfortmedia.s3.amazonaws.com/froala_pics/ffa1019f6ad2_potted_sprout_by_blushbun-dacgjfa.gif">
     <title>About Finch</title>
     <link href="https://fonts.googleapis.com/css?family=Karla%7CStaatliches" rel="stylesheet">
     <style>
@@ -70,7 +71,8 @@ margin-right:15px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/eca04f286e9449c36ae0c290ce68b178/tumblr_pjsae7rKpb1wyarz6o2_400.jpg"
+      <div class="col"> <img src="https://66.media.tumblr.com/eca04f286e9449c36ae0c290ce68b178/tumblr_pjsae7rKpb1wyarz6o2_400.jpg"
+
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch<br>
         <b>Age:</b> 23<br>
@@ -91,5 +93,6 @@ margin-right:15px;
       My interests include Pokémon games, Nintendo consoles, strategy board
       games &amp; CCGs, psychology, statistics, and programming. I like science
       and math jokes and cats.</div>
+    
   </body>
 </html>
