--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@ margin-right:15px;
       display:block;
         width:inherit;
         height:90px;
-        padding-left:10px;
-      text-align:justify;}
+}
       
       .row:hover{
                      background-image:url('https://cdn.bulbagarden.net/upload/7/75/Ultra_Ball_battle_V.png');
@@ -115,20 +114,20 @@ margin-right:15px;
         <b>Pronouns:</b> He/him<br>
         <b>Location:</b> Los Angeles</div>
       Hey there! <br>
-      I'm Finch. I'm an author (professional publishing) of creative nonfiction,
+      I'm Finch. I'm an professionally published author of creative nonfiction,
       specifically a genre called lyric essay, and a PhD student studying
       developmental/clinical psychology. I do research with autistic people! I'm
       also autistic myself, as well as bipolar. Neurodiversity is a big part of
-      my life. <br>
+      my writing and my life. <br>
       <br>
       I'm trans-agender and asexual/biromantic. I use he/him pronouns, since
-      that's what I use in my day to day life, but they/them is also good. What
-      else? I'm culturally and ethnically Jewish. Religiously, I'm some mix of
-      Buddhist and atheist.<br>
+      that's what I use in my day to day life, but they/them is also good. I'm
+      culturally and ethnically Jewish. Religiously, I'm Buddhist and atheist.<br>
       <br>
-      My interests include Pokémon games, Nintendo consoles, strategy board
-      games &amp; CCGs, psychology, statistics, and programming. I like science
-      and math jokes and cats.<br>
+      I'm a Ravenclaw. My interests include Pokémon games and TCG, Nintendo
+      consoles, strategy board games &amp; CCGs like Magic: The Gathering, and
+      anything related to psychology, statistics, and programming. I like
+      science and math jokes and cats.<br>
       <br>
       <hr><br>
       <div class="row">
@@ -140,7 +139,8 @@ margin-right:15px;
             class="rowpic"><img src="https://66.media.tumblr.com/37b7a9ba48e5218a847af057b7eb9938/tumblr_pju2jyDqk41wyarz6o1_75sq.png"
             class="rowpic"></center>
       </div>
-      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a></center>
+      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
+        <a href="https://www.zephyr-specs.tumblr.com/">return to tumblr</a></center>
     </div>
   </body>
 </html>
