--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@ margin-right:15px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/711da39542c979d4902fa555ff5b4dc0/tumblr_pjsqmsqrO91wyarz6o1_100.png"
+      <div class="col"> <img src="https://66.media.tumblr.com/711da39542c979d4902fa555ff5b4dc0/tumblr_pjsqmsqrO91wyarz6o1_100.png"
+
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch<br>
         <b>Age:</b> 23<br>
@@ -131,16 +132,22 @@ margin-right:15px;
       <br>
       <hr><br>
       <div class="row">
-        <center><img src="https://66.media.tumblr.com/010a7e450ac35247486efcdd86313f3d/tumblr_pju2hhW5tR1wyarz6o1_75sq.png"
-            class="rowpic"> <img src="https://66.media.tumblr.com/7dd72778e8c3b42e13e35cbdabdd0f56/tumblr_pju296hM9K1wyarz6o1_75sq.png"
-            class="rowpic"> <img src="https://66.media.tumblr.com/55d2545c07236422ed5cb283ed6a9d34/tumblr_pju296hM9K1wyarz6o2_75sq.png"
-            class="rowpic"><img src="https://66.media.tumblr.com/7afab21b1186d47b616ad4c718741dc0/tumblr_pju296hM9K1wyarz6o5_75sq.png"
-            class="rowpic"> <img src="https://66.media.tumblr.com/a5c06b03a5a8ab4b818491a1dce1462e/tumblr_pju296hM9K1wyarz6o3_75sq.png"
-            class="rowpic"><img src="https://66.media.tumblr.com/37b7a9ba48e5218a847af057b7eb9938/tumblr_pju2jyDqk41wyarz6o1_75sq.png"
+        <center><img src="https://66.media.tumblr.com/010a7e450ac35247486efcdd86313f3d/tumblr_pju2hhW5tR1wyarz6o1_75sq.png"
+
+            class="rowpic"> <img src="https://66.media.tumblr.com/7dd72778e8c3b42e13e35cbdabdd0f56/tumblr_pju296hM9K1wyarz6o1_75sq.png"
+
+            class="rowpic"> <img src="https://66.media.tumblr.com/55d2545c07236422ed5cb283ed6a9d34/tumblr_pju296hM9K1wyarz6o2_75sq.png"
+
+            class="rowpic"><img src="https://66.media.tumblr.com/7afab21b1186d47b616ad4c718741dc0/tumblr_pju296hM9K1wyarz6o5_75sq.png"
+
+            class="rowpic"> <img src="https://66.media.tumblr.com/a5c06b03a5a8ab4b818491a1dce1462e/tumblr_pju296hM9K1wyarz6o3_75sq.png"
+
+            class="rowpic"><img src="https://66.media.tumblr.com/37b7a9ba48e5218a847af057b7eb9938/tumblr_pju2jyDqk41wyarz6o1_75sq.png"
+
             class="rowpic"></center>
       </div>
       <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
-        <a href="https://www.zephyr-specs.tumblr.com/">return to tumblr</a></center>
+        <a href="http://zephyr-specs.tumblr.com/">return to tumblr</a></center>
     </div>
   </body>
 </html>
