--- a/index.html
+++ b/index.html
@@ -107,47 +107,30 @@ margin-right:15px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/711da39542c979d4902fa555ff5b4dc0/tumblr_pjsqmsqrO91wyarz6o1_100.png"
-
+      <div class="col"> <img src="https://66.media.tumblr.com/711da39542c979d4902fa555ff5b4dc0/tumblr_pjsqmsqrO91wyarz6o1_100.png"
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch<br>
         <b>Age:</b> 23<br>
         <b>Pronouns:</b> He/him<br>
         <b>Location:</b> Los Angeles</div>
       Hey there! <br>
-      I'm Finch. I'm an professionally published author of creative nonfiction,
-      specifically a genre called lyric essay, and a PhD student studying
-      developmental/clinical psychology. I do research with autistic people! I'm
-      also autistic myself, as well as bipolar. Neurodiversity is a big part of
-      my writing and my life. <br>
+      I'm Finch (and you may also call me Finny). I'm an professionally
+      published author of creative nonfiction, specifically a genre called lyric
+      essay, and a PhD student studying developmental and clinical psychology.
+      I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times fast!
+      My research approach is informed by my own neurodiverse perspective. <br>
       <br>
-      I'm trans-agender and asexual/biromantic. I use he/him pronouns, since
-      that's what I use in my day to day life, but they/them is also good. I'm
-      culturally and ethnically Jewish. Religiously, I'm Buddhist and atheist.<br>
+      My pronouns are he/him. I'm trans-agender, and perhaps I would call myself
+      demiboy? I'm also gray-asexual, and indeed hopelessly biromantic. I'm also
+      ethnically Jewish (Ashkenazi). <br>
       <br>
-      I'm a Ravenclaw. My interests include Pokémon games and TCG, Nintendo
-      consoles, strategy board games &amp; CCGs like Magic: The Gathering, and
-      anything related to psychology, statistics, and programming. I like
-      science and math jokes and cats.<br>
+      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
+      consoles. Pokémon has been my special interest for over a decade! <br>
+      <br>
       <br>
       <hr><br>
-      <div class="row">
-        <center><img src="https://66.media.tumblr.com/010a7e450ac35247486efcdd86313f3d/tumblr_pju2hhW5tR1wyarz6o1_75sq.png"
-
-            class="rowpic"> <img src="https://66.media.tumblr.com/7dd72778e8c3b42e13e35cbdabdd0f56/tumblr_pju296hM9K1wyarz6o1_75sq.png"
-
-            class="rowpic"> <img src="https://66.media.tumblr.com/55d2545c07236422ed5cb283ed6a9d34/tumblr_pju296hM9K1wyarz6o2_75sq.png"
-
-            class="rowpic"><img src="https://66.media.tumblr.com/7afab21b1186d47b616ad4c718741dc0/tumblr_pju296hM9K1wyarz6o5_75sq.png"
-
-            class="rowpic"> <img src="https://66.media.tumblr.com/a5c06b03a5a8ab4b818491a1dce1462e/tumblr_pju296hM9K1wyarz6o3_75sq.png"
-
-            class="rowpic"><img src="https://66.media.tumblr.com/37b7a9ba48e5218a847af057b7eb9938/tumblr_pju2jyDqk41wyarz6o1_75sq.png"
-
-            class="rowpic"></center>
-      </div>
       <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
-        <a href="http://zephyr-specs.tumblr.com/">return to tumblr</a></center>
+      </center>
     </div>
   </body>
 </html>
