--- a/tags.html
+++ b/tags.html
@@ -107,13 +107,25 @@ margin-right:15px;
   <body>
     <div id="main">
       <h1>Tags</h1>
+      <b>category tags</b> <br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/personal">personal</a>
-      for personal posts <br>
+      for posts about my daily life <br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/selfies">selfies</a>
       for posts with my face in them<br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/blog">blog</a> for
       blog-style posts<br>
       <br>
+      <b>content tags</b><br>
+      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/actuallyautistic">actuallyautistic</a>
+      for posts about autistic life<br>
+      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/mental%20illness">mental
+        illness</a> for any posts about mental illness, specific disorders will
+      also be tagged<br>
+      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/pokemon">pokemon</a>
+      for Pokemon posts (but I don't usually tag reblogs)<br>
+      <br>
+      I don't typically use many tags, but if you would like something to be
+      tagged, just ask! <br>
       <hr><br>
       <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
       </center>
