--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ margin-bottom:20px;
       <div class="stats"> <b>Name:</b> Finch (Finny)<br>
         <b>Age:</b> 23<br>
         <b>Pronouns:</b> He/Him<br>
-        <b>Username:</b> ZephyrSpecs</div>
+        <b>Pfio Username:</b> ZephyrSpecs</div>
       <div class="clear"> </div>
       Hey there! I'm Finch, or Finny if you prefer. I'm an professionally
-      published author of creative nonfiction, specifically a genre called lyric
+      published author of creative nonfiction. I write in a genre called lyric
       essay, which infuses nonfiction with poetic logic. I'm also a PhD student
       studying psychology at a research university. <br>
       <br>
@@ -149,7 +149,10 @@ margin-bottom:20px;
       Buddhist. <br>
       <br>
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
-      consoles. Pokémon has been my special interest for over a decade! <br>
+      consoles. Pokémon has been my special interest for over a decade! I'm also
+      into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
+      board games like Catan and Smash Up, and RPGs like D&amp;D and Pathfinder!
+      <br>
       <br>
       <br>
       <hr><br>
