--- a/index.html
+++ b/index.html
@@ -126,31 +126,30 @@ margin-bottom:20px;
         <b>Pronouns:</b> He/Him<br>
         <b>Pfio Username:</b> ZephyrSpecs</div>
       <div class="clear"> </div>
-      Hey there! I'm Finch, or Finny if you prefer. I'm an professionally
+      Hey there! I'm Finch, or Finny if you prefer. I'm a professionally
       published author of creative nonfiction. I write in a genre called lyric
       essay, which infuses nonfiction with poetic logic. I'm also a PhD student
       studying psychology at a research university. <br>
       <br>
       <center> <b>Here are some pieces of trivia about me:</b></center>
       <br>
-      I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times fast!
-      My research approach is informed by my own neurodiverse perspective, and I
-      tend to study topics that I have personal insight into. <br>
+      &gt; I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times
+      fast! My research approach is informed by my own neurodiverse perspective,
+      and I tend to study topics that I have personal insight into. <br>
       <br>
-      My pronouns are he/him/his. I'm transmasculine and neutrois, and perhaps I
-      would label myself as a demiboy. I'm also gray-asexual, and indeed
-      hopelessly biromantic. <br>
+      &gt; My pronouns are he/him/his. I'm transmasculine and neutrois. I'm also
+      gray-asexual, and indeed hopelessly biromantic. <br>
       <br>
-      I'm culturally and ethnically Jewish (Ashkenazi). I am atheistic and don't
-      identify with any particular religion, but I might call myself an aspiring
-      Buddhist. <br>
+      &gt; I'm culturally and ethnically Jewish (Ashkenazi). I am atheistic and
+      don't identify with any particular religion, but I might call myself an
+      aspiring Buddhist. <br>
       <br>
-      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
-      consoles. Pokémon has been my special interest for over a decade! <br>
+      &gt; I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo
+      DS consoles. Pokémon has been my special interest for over a decade! <br>
       <br>
-      I'm also into tabletop gaming, including Magic: The Gathering and Pokémon
-      TCG, board games like Catan and Smash Up, and RPGs like D&amp;D and
-      Pathfinder! <br>
+      &gt; I'm also into tabletop gaming, including Magic: The Gathering and
+      Pokémon TCG, board games like Catan and Smash Up, and RPGs like D&amp;D
+      and Pathfinder! <br>
       <br>
       <br>
       <hr><br>
