--- a/index.html
+++ b/index.html
@@ -121,35 +121,30 @@ margin-bottom:20px;
       <h1> About Finch </h1>
       <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
           class="av"> </div>
-      <div class="stats"> <b>Name:</b> Finch (Finny)<br>
+      <div class="stats"> <b>Name:</b> Finch<br>
         <b>Age:</b> 23<br>
         <b>Pronouns:</b> He/Him<br>
-        <b>Pfio Username:</b> ZephyrSpecs</div>
+        <b>Alignment:</b> Chaotic Neutral</div>
       <div class="clear"> </div>
       Hey there! I'm Finch, or Finny if you prefer. I'm a professionally
-      published author of creative nonfiction. I write in a genre called lyric
-      essay, which infuses nonfiction with poetic logic. I'm also a PhD student
-      studying psychology at a research university. <br>
+      published author of creative nonfiction. I write a genre called lyric
+      essay or collage essay, and for the most part I write about my personal
+      experiences. I'm also a PhD student studying psychology at a research
+      university. <br>
       <br>
-      <center> <b>Here are some pieces of trivia about me:</b></center>
+      I'm transmasculine and neutrois. I'm also gray-asexual and panromantic. <br>
       <br>
-      &gt; I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times
-      fast! My research approach is informed by my own neurodiverse perspective,
-      and I tend to study topics that I have personal insight into. <br>
+      I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times fast!
+      My research approach is informed by my own neurodiverse perspective, and I
+      tend to study topics that I have personal insight into. <br>
       <br>
-      &gt; My pronouns are he/him/his. I'm transmasculine and neutrois. I'm also
-      gray-asexual, and indeed hopelessly biromantic. <br>
+      I'm culturally and ethnically Jewish (Ashkenazi). I'm somewhat hesitantly
+      a LaVeyan Satanist.<br>
       <br>
-      &gt; I'm culturally and ethnically Jewish (Ashkenazi). I am atheistic and
-      don't identify with any particular religion, but I might call myself an
-      aspiring Buddhist. <br>
-      <br>
-      &gt; I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo
-      DS consoles. Pokémon has been my special interest for over a decade! <br>
-      <br>
-      &gt; I'm also into tabletop gaming, including Magic: The Gathering and
-      Pokémon TCG, board games like Catan and Smash Up, and RPGs like D&amp;D
-      and Pathfinder! <br>
+      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
+      consoles. Pokémon has been my special interest for over a decade! I'm also
+      into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
+      board games like Catan and Smash Up, and RPGs like D&amp;D! <br>
       <br>
       <br>
       <hr><br>
