--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@ margin-bottom:20px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
-
+      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch<br>
         <b>Age:</b> 23<br>
@@ -139,12 +138,16 @@ margin-bottom:20px;
       My research approach is informed by my own neurodiverse perspective, and I
       tend to study topics that I have personal insight into. <br>
       <br>
-      I'm culturally and ethnically Jewish (Ashkenazi). I'm atheist and sort of a secular Buddhist?<br>
+      I'm culturally and ethnically Jewish (Ashkenazi). I'm atheist and sort of
+      a secular Buddhist?<br>
       <br>
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
       consoles. Pokémon has been my special interest for over a decade! I'm also
       into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
       board games like Catan and Smash Up, and RPGs like D&amp;D! <br>
+      <br>
+      Some other fandoms I'm into: Steven Universe, YGO VRAINS, Star Trek: TNG <br>
+      Some music that I'm into: Indie folk, indie rock, lo-fi<br>
       <br>
       <br>
       <hr><br>
