--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@ margin-bottom:20px;
       <div class="clear"> </div>
       Hey there! I'm Finch, or Finny if you prefer. I'm a professionally
       published author of creative nonfiction. I write a genre called lyric
-      essay or collage essay, and for the most part I write about my personal
-      experiences. I'm also a PhD student studying psychology at a research
-      university. <br>
+      essay or collage essay, and I write about my personal experiences. I'm
+      also a PhD student studying psychology at a research university. <br>
       <br>
-      I'm transmasculine and neutrois. I'm also gray-asexual and panromantic. <br>
+      I'm a transmasculine neutrois. In terms of sexuality, I'm gray-asexual and
+      panromantic. I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that
+      five times fast! <br>
       <br>
-      I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that five times fast!
-      My research approach is informed by my own neurodiverse perspective, and I
-      tend to study topics that I have personal insight into. <br>
-      <br>
-      I'm culturally and ethnically Jewish (Ashkenazi). I'm atheist and sort of
-      a secular Buddhist?<br>
+      I'm culturally and ethnically Jewish (Ashkenazi). I'm atheistic and a
+      follower of Daoist way of living, trying to find my own peace within the
+      natural chaos of the world as it is, and to know myself as I am in the
+      moment. Everything is always changing; wisdom is to accept and embrace
+      change.<br>
       <br>
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
       consoles. Pokémon has been my special interest for over a decade! I'm also
