--- a/index.html
+++ b/index.html
@@ -121,37 +121,33 @@ margin-bottom:20px;
       <h1> About Finch </h1>
       <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
           class="av"> </div>
-      <div class="stats"> <b>Name:</b> Finch<br>
+      <div class="stats"> <b>Name:</b> Finch Auden<br>
         <b>Age:</b> 23<br>
         <b>Pronouns:</b> He/Him<br>
         <b>Alignment:</b> Chaotic Neutral</div>
       <div class="clear"> </div>
-      Hey there! I'm Finch, or Finny if you prefer. I'm a professionally
-      published author of creative nonfiction. I write a genre called lyric
-      essay or collage essay, and I write about my personal experiences. I'm
-      also a PhD student studying psychology at a research university. <br>
+      Hey there! I'm Finch. I'm a professionally published author of creative
+      nonfiction. I write a genre called lyric essay or collage essay, and I
+      write about my personal experiences. I'm also a PhD student studying
+      psychology at a research university. <br>
       <br>
-      I'm a transmasculine neutrois. In terms of sexuality, I'm gray-asexual and
-      panromantic. I'm autistic &amp; bipolar &amp; ADHD &amp; OCD. Say that
-      five times fast! <br>
-      <br>
-      I'm culturally and ethnically Jewish (Ashkenazi). I'm atheistic and a
-      follower of Daoist way of living, trying to find my own peace within the
-      natural chaos of the world as it is, and to know myself as I am in the
-      moment. Everything is always changing; wisdom is to accept and embrace
-      change.<br>
+      I'm a transmasculine neutrois, which could also be referred to as
+      transneutral or neutral gender. In terms of sexual orientation, I'm
+      demisexual/gray-asexual and panromantic. I'm autistic &amp; bipolar &amp;
+      ADHD &amp; OCD. (Say that five times fast!) I'm culturally and ethnically
+      Jewish (Ashkenazi), and an atheist with Daoist leanings.<br>
       <br>
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
       consoles. Pokémon has been my special interest for over a decade! I'm also
       into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
-      board games like Catan and Smash Up, and RPGs like D&amp;D! <br>
+      board games like Catan and Smash Up, and RPGs like D&amp;D. <br>
       <br>
       Some other fandoms I'm into: Steven Universe, YGO VRAINS, Star Trek: TNG <br>
-      Some music that I'm into: Indie folk, indie rock, lo-fi<br>
+      Some music genres I'm into: Indie folk, indie rock, lo-fi<br>
       <br>
       <br>
       <hr><br>
-      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
+      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">pillowfort</a><br>
       </center>
     </div>
   </body>
