--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ margin-bottom:20px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
+      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
+
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch Auden<br>
         <b>Age:</b> 23<br>
@@ -135,20 +136,13 @@ margin-bottom:20px;
       transneutral or neutral gender. In terms of sexual orientation, I'm
       demisexual/gray-asexual and panromantic. I'm autistic &amp; bipolar &amp;
       ADHD &amp; OCD. (Say that five times fast!) I'm culturally and ethnically
-      Jewish (Ashkenazi), and an atheist with Daoist leanings.<br>
+      Jewish (Ashkenazi).<br>
       <br>
-      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
-      consoles. Pokémon has been my special interest for over a decade! I'm also
-      into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
-      board games like Catan and Smash Up, and RPGs like D&amp;D. <br>
+      I love Nintendo. Pokémon has been my special interest for over a decade!
+      I'm also into board games, cats, the color blue, indie folk music, board
+      games, and using italics.<br>
       <br>
-      Some other fandoms I'm into: Steven Universe, YGO VRAINS, Star Trek: TNG <br>
-      Some music genres I'm into: Indie folk, indie rock, lo-fi<br>
-      <br>
-      <br>
-      <hr><br>
-      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">pillowfort</a><br>
-      </center>
     </div>
+    
   </body>
 </html>
