--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@ margin-bottom:20px;
   <body>
     <div id="main">
       <h1> About Finch </h1>
-      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
-
+      <div class="col"> <img src="https://66.media.tumblr.com/3160f116b9b0945d2ed56ec16bf3ad54/tumblr_plwdke8x081wyarz6o1_75sq.png"
           class="av"> </div>
       <div class="stats"> <b>Name:</b> Finch Auden<br>
         <b>Age:</b> 23<br>
@@ -130,19 +129,19 @@ margin-bottom:20px;
       Hey there! I'm Finch. I'm a professionally published author of creative
       nonfiction. I write a genre called lyric essay or collage essay, and I
       write about my personal experiences. I'm also a PhD student studying
-      psychology at a research university. <br>
+      psychology at a research university. I'm culturally and ethnically Jewish
+      (Ashkenazi).<br>
       <br>
       I'm a transmasculine neutrois, which could also be referred to as
       transneutral or neutral gender. In terms of sexual orientation, I'm
-      demisexual/gray-asexual and panromantic. I'm autistic &amp; bipolar &amp;
-      ADHD &amp; OCD. (Say that five times fast!) I'm culturally and ethnically
-      Jewish (Ashkenazi).<br>
+      demisexual/gray-asexual and panromantic. I was professionally diagnosed
+      with autism at age 7, and with bipolar disorder age 17. I also have OCD
+      and ADHD.<br>
       <br>
       I love Nintendo. Pokémon has been my special interest for over a decade!
-      I'm also into board games, cats, the color blue, indie folk music, board
-      games, and using italics.<br>
+      I'm also into board games, cats, the color blue, indie folk, and overusing
+      italics in my writing.<br>
       <br>
     </div>
-    
   </body>
 </html>
