--- a/index.html
+++ b/index.html
@@ -126,22 +126,35 @@ margin-bottom:20px;
         <b>Pronouns:</b> He/Him<br>
         <b>Alignment:</b> Chaotic Neutral</div>
       <div class="clear"> </div>
-      Hey there! I'm Finch. I'm a professionally published author of creative
-      nonfiction. I write a genre called lyric essay or collage essay, and I
-      write about my personal experiences. I'm also a PhD student studying
-      psychology at a research university. I'm culturally and ethnically Jewish
-      (Ashkenazi).<br>
+      Hey there! I'm Finch, or Finny. I'm a professionally published author of
+      creative nonfiction. I write a genre called lyric essay or collage essay,
+      and for the most part I write about my personal experiences. I'm also a
+      PhD student studying psychology at a well-known research university. <br>
       <br>
-      I'm a transmasculine neutrois, which could also be referred to as
-      transneutral or neutral gender. In terms of sexual orientation, I'm
-      demisexual/gray-asexual and panromantic. I was professionally diagnosed
-      with autism at age 7, and with bipolar disorder age 17. I also have OCD
-      and ADHD.<br>
+      I'm a transgender neutrois. Other labels that might apply to me are
+      agender and libramasculine. I'm also gray-asexual (somewhere between
+      demisexual and autosexual) and panromantic. <br>
       <br>
-      I love Nintendo. Pokémon has been my special interest for over a decade!
-      I'm also into board games, cats, the color blue, indie folk, and overusing
-      italics in my writing.<br>
+      I've been diagnosed autistic &amp; bipolar 1 (though I personally prefer
+      the older term manic depression) &amp; ADHD &amp; OCD. Say that five times
+      fast! The research work I do, not to mention my literary work, is informed
+      by my own neurodiverse perspective. I study and wrire about topics that I
+      have personal insight into. <br>
       <br>
+      I'm culturally and ethnically Jewish (Ashkenazi). I was born into an
+      interfaith family. I'm atheist by constitution, and have no belief in
+      spiritual or supernatural phenomena. I'm a secular Buddhist.<br>
+      <br>
+      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
+      consoles. Pokémon has been my special interest for over a decade! I'm also
+      into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
+      board games like Catan and Smash Up, and RPGs like D&amp;D. <br>
+      <br>
+      <br>
+      <hr><br>
+      <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
+        <a href="https://zephyr-specs.tumblr.com/">return to tumblr</a><br>
+      </center>
     </div>
   </body>
 </html>
