--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ margin-bottom:20px;
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
       consoles. Pokémon has been my special interest for over a decade! I'm also
       into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
-      board games like Catan and Smash Up, and RPGs like D&amp;D. <br>
+      board games like Catan and Smash Up, and RPGs like D&amp;D. I'm into indie
+      folk music and the color blue.<br>
       <br>
       <br>
       <hr><br>
