--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@ margin-bottom:20px;
       .clear{
       clear:both;}
       
+      .av2{
+      float:right;
+        height:100%;
+        width:auto;
+        border:none;
+      }
+      
     </style>
   </head>
   <body>
@@ -126,20 +133,22 @@ margin-bottom:20px;
         <b>Pronouns:</b> He/Him<br>
         <b>Alignment:</b> Chaotic Neutral</div>
       <div class="clear"> </div>
-      Hey there! I'm Finch, or Finny. I'm a professionally published author of
-      creative nonfiction. I write a genre called lyric essay or collage essay,
-      and for the most part I write about my personal experiences. I'm also a
-      PhD student studying psychology at a well-known research university. <br>
+      Hey there! I'm Finch. I'm a professionally published author of creative
+      nonfiction. I write a genre called lyric essay or collage essay, and I
+      write about my personal experiences (so I might also be called a
+      memoirist). I'm also a PhD student studying psychology at a research
+      university. <br>
       <br>
       I'm a transgender neutrois. Other labels that might apply to me are
       agender and libramasculine. I'm also gray-asexual (somewhere between
       demisexual and autosexual) and panromantic. <br>
       <br>
-      I've been diagnosed autistic &amp; bipolar 1 (though I personally prefer
-      the older term manic depression) &amp; ADHD &amp; OCD. Say that five times
-      fast! The research work I do, not to mention my literary work, is informed
-      by my own neurodiverse perspective. I study and wrire about topics that I
-      have personal insight into. <br>
+      <img src="https://66.media.tumblr.com/364a3619bbf2bec53556d8d189a5f66b/tumblr_pqf7ppQqW61wyarz6o1_250.png"
+        class="av2"> I've been diagnosed autistic &amp; bipolar 1 (though I
+      personally prefer the older term manic depression) &amp; ADHD &amp; OCD.
+      Say that five times fast! The research work I do, not to mention my
+      literary work, is informed by my own neurodiverse perspective. I study and
+      write about topics that I have personal insight into. <br>
       <br>
       I'm culturally and ethnically Jewish (Ashkenazi). I was born into an
       interfaith family. I'm atheist by constitution, and have no belief in
@@ -148,8 +157,8 @@ margin-bottom:20px;
       I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
       consoles. Pokémon has been my special interest for over a decade! I'm also
       into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
-      board games like Catan and Smash Up, and RPGs like D&amp;D. I'm into indie
-      folk music and the color blue.<br>
+      board games like Catan and Smash Up. I'm also into indie folk music, kick
+      scooters, and the color blue.<br>
       <br>
       <br>
       <hr><br>
