--- a/index.html
+++ b/index.html
@@ -140,26 +140,20 @@ margin-bottom:20px;
       university. <br>
       <br>
       I'm a transgender neutrois. Other labels that might apply to me are
-      agender and libramasculine. I'm also gray-asexual (somewhere between
-      demisexual and autosexual) and panromantic. <br>
-      <br>
-      <img src="https://66.media.tumblr.com/364a3619bbf2bec53556d8d189a5f66b/tumblr_pqf7ppQqW61wyarz6o1_250.png"
-        class="av2"> I've been diagnosed autistic &amp; bipolar 1 (though I
-      personally prefer the older term manic depression) &amp; ADHD &amp; OCD.
-      Say that five times fast! The research work I do, not to mention my
-      literary work, is informed by my own neurodiverse perspective. I study and
-      write about topics that I have personal insight into. <br>
+      agender and libramasculine. I'm also gray-asexual and biromantic. I've
+      been diagnosed autistic &amp; bipolar 1 (though I personally prefer the
+      older term manic depression) as well as ADHD &amp; OCD. Say that five
+      times fast! <br>
       <br>
       I'm culturally and ethnically Jewish (Ashkenazi). I was born into an
-      interfaith family. I'm atheist by constitution, and have no belief in
-      spiritual or supernatural phenomena. I'm a secular Buddhist.<br>
+      interfaith family. I'm atheist by constitution (meaning I simply can't
+      believe in anything supernatural; it just isn't how my mind works).<br>
       <br>
-      I love Nintendo. I'm a total nerd who collects Game Boy and Nintendo DS
-      consoles. Pokémon has been my special interest for over a decade! I'm also
-      into tabletop gaming, including Magic: The Gathering and Pokémon TCG,
-      board games like Catan and Smash Up. I'm also into indie folk music, kick
-      scooters, and the color blue.<br>
-      <br>
+      I love Nintendo. I collect Game Boy and Nintendo DS consoles. Pokémon has
+      been my special interest for over a decade! I'm also into tabletop gaming,
+      including Magic: The Gathering and Pokémon TCG, and board games like Catan
+      and Smash Up. I'm also into indie folk music, kick scooters, and the color
+      blue.<br>
       <br>
       <hr><br>
       <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
