--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="shortcut icon" type="image/png" href="https://pillowfortmedia.s3.amazonaws.com/froala_pics/ffa1019f6ad2_potted_sprout_by_blushbun-dacgjfa.gif">
-    <title>Finny's Tags</title>
+    <title>ZephyrSpecs Tags</title>
     <link href="https://fonts.googleapis.com/css?family=Karla%7CStaatliches" rel="stylesheet">
     <style>
       body{
@@ -112,17 +112,16 @@ margin-right:15px;
       for posts about my daily life <br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/selfies">selfies</a>
       for posts with my face in them<br>
-      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/blog">blog</a> for
-      blog-style posts<br>
+      <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/discussion">discussion</a>
+      for posts that invite a conversation <br>
       <br>
       <b>content tags</b><br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/actuallyautistic">actuallyautistic</a>
-      for posts about autistic life<br>
-      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/mental%20illness">mental
-        illness</a> for any posts about mental illness, specific disorders will
-      also be tagged<br>
-      <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/pokemon">pokemon</a>
-      for Pokemon posts (but I don't usually tag reblogs)<br>
+      for posts about autism<br>
+      <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/bipolar">bipolar</a>
+      for posts about bipolar disorder<br>
+      <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/special%20interests">special
+        interests</a> for posts where I assert my arcane knowledges<br>
       <br>
       I don't typically use many tags, but if you would like something to be
       tagged, just ask! <br>
