--- a/tags.html
+++ b/tags.html
@@ -114,17 +114,19 @@ margin-right:15px;
       for posts with my face in them<br>
       <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/discussion">discussion</a>
       for posts that invite a conversation <br>
+      <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/bipolar%20adventure">bipolar
+        adventure</a> for personal posts about my bipolar disorder <br>
       <br>
       <b>content tags</b><br>
       <a href="https://www.pillowfort.io/ZephyrSpecs/tagged/actuallyautistic">actuallyautistic</a>
       for posts about autism<br>
       <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/bipolar">bipolar</a>
-      for posts about bipolar disorder<br>
+      for posts about bipolar disorder in general<br>
       <a href="https://www.pillowfort.social/ZephyrSpecs/tagged/special%20interests">special
-        interests</a> for posts where I assert my arcane knowledges<br>
+        interests</a> for posts where I assert my arcane knowledges of
+      particular subjects<br>
       <br>
-      I don't typically use many tags, but if you would like something to be
-      tagged, just ask! <br>
+      If you would like something to be tagged, just ask! <br>
       <hr><br>
       <center> <a href="https://www.pillowfort.io/ZephyrSpecs">return to fort</a><br>
       </center>
